--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
-/** @type {import('next').NextConfig} */
-const nextConfig = {
-  // 強制禁用 Turbopack 的一些實驗性行為
-  experimental: {
-    turbo: {
-      // 這裡留空或不設定任何 rules，讓它回歸傳統模式
-    },
+{
+  "name": "ui-components-qs-nextjs",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "postinstall": "node scripts/postinstall.js"
   },
-  // 針對某些會導致編譯錯誤的 CommonJS 模組進行轉譯
-  transpilePackages: [
-    "@account-kit/core",
-    "@account-kit/infra",
-    "@account-kit/react",
-    "@account-kit/signer",
-    "thread-stream"
-  ],
-  // 忽略編譯時的 lint 錯誤（避免因為舊套件語法導致中斷）
-  eslint: {
-    ignoreDuringBuilds: true,
+  "dependencies": {
+    "next": "^16.1.1-canary.8",
+    "react": "^18",
+    "react-dom": "^18",
+    "viem": "^2.43.4",
+    "wagmi": "^2.15.4"
   },
-  typescript: {
-    ignoreBuildErrors: true,
+  "devDependencies": {
+    "typescript": "^5"
   }
-};
-
-export default nextConfig;
+}
